# MeasureSoftGram-Core

./: .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  code_of_conduct.md  correlation.py  docker-compose.yml  entendendo-as-estruturas-de-dados.ipynb  entendendo_as_estruturas_de_dados.ipynb  parser.py  plot_tensor.py  pyproject.toml  pytest.ini  requirements.txt  server.py  sonar-project.properties  statisticsTreatement.py  tox.ini
.github/: CODEOWNERS  pull_request_template.md
arquivosNaoBinarios/: Exemplos Formulas.docx  MeasureSoftGram - CorrecoesQuali - Cap 2 - v_0 - HRN.docx  MeasureSoftGram - CorrecoesQuali - Cap 3 - v_0 - HRN.docx  MeasureSoftGram - CorrecoesQuali - HRN - v_0 - (80%).docx  MeasureSoftGram - CorrecoesQuali - HRN - v_0 - (97%).docx  MeasureSoftGram - CorrecoesQuali - Introducao - v_0 -  HRN .docx  MeasureSoftGram - CorrecoesQuali - Introducao - v_0 -  HRN_GHT.docx  MeasureSoftGram - CorrecoesQuali - Introducao - v_1 -  HRN.docx  MeasureSoftGram - CorrecoesQuali - Introducao - v_1 -  HRN_GHT.docx  MeasureSoftGram - CorrecoesQuali - Introducao - v_2 -  HRN.docx  MeasureSoftGram-CorrecoesQuali-Introducao-v_2-HRN_GHT.docx  MeasureSoftGram-CorrecoesQuali-Introducao-v_3-HRN.docx  MeasureSoftGram-CorrecoesQuali-Introducao-v_3-HRN_GHT.docx  MeasureSoftGram-CorrecoesQuali-Introducao-v_4-HRN.docx  MeasureSoftGram-CorrecoesQuali-Introducao-v_4-HRN_GHT.docx  ParasiteMetrics_v1.xlsx  Relacao Caracteristicas ISO 25010.xlsx  researchDesign.xlsx  ~$Imagens Tese.pptx  ~$asureSoftGram-CorrecoesQuali-Cap-III-v_0-HRN.docx
datasetPrototipo/: dataset_SQPC1_Parasite_v1.csv  dataset_SQPC1_Parasite_v2.csv
img/: IF CC-Parasite example a.jp2  IF CC-Parasite example b.jp2  Operacionalizacao MeasureSofGram - english.jp2  Quality Alert Description.jp2  Quality Baseline Comparision.jp2  Quality Equalizer - Base Matrix.jp2  SQCi - Planned.jp2  SQCi - Realized.jp2  Tensors Order.jp2  Threshold - Interpolation - IF.jp2  Trade-offs ISO-25010-MeasureSoftGram.jp2  VAS - Scale.jp2  abstracaoSimpMeasureSoftGram - english.jp2  general model structure - english.jp2  iso 25010 - english.jp2
notebook/: measuresoftgram-qrapid-fga-eps-mds-2020-2-KOKAMA.ipynb
src/: Rispoli.py  __init__.py  app.py  (+27 more)
(+90 files in other folders)
